--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -2,7 +2,7 @@
 name = "metered-demo"
 version = "0.1.0"
 authors = ["Simon Chemouil <simon.chemouil@lambdacube.fr>"]
-edition = "2018"
+edition = "2021"
 
 #break out of workspace
 [workspace]
@@ -11,7 +11,7 @@ edition = "2018"
 hdrhistogram = "7.5"
 rand = "0.8"
 atomic = "0.5"
-tokio = { version = "1.19", features = [ "rt", "rt-multi-thread", "time" ] }
+tokio = { version = "1.19", features = ["rt", "rt-multi-thread", "time"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_prometheus = "0.1"
 thiserror = "1.0"
@@ -22,5 +22,5 @@ path = "../metered"
 features = [
     # Enable to override the default and skip "cleared" entries from the `error_count`
     # even when the attribute is not specified.
-    "error-count-skip-cleared-by-default"
-    ]
+    "error-count-skip-cleared-by-default",
+]
