--- a/demos/Cargo.toml
+++ b/demos/Cargo.toml
@@ -6,15 +6,16 @@ edition = "2021"
 
 #break out of workspace
 [workspace]
+resolver = "2"
 
 [dependencies]
 hdrhistogram = "7.5"
-rand = "0.8"
-atomic = "0.5"
-tokio = { version = "1.19", features = ["rt", "rt-multi-thread", "time"] }
+rand = "0.9"
+atomic = "0.6"
+tokio = { version = "1.43", features = ["rt", "rt-multi-thread", "time"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_prometheus = "0.1"
-thiserror = "1.0"
+serde_prometheus = "0.2"
+thiserror = "2.0"
 
 [dependencies.metered]
 version = "0.9"
