--- a/metered/Cargo.toml
+++ b/metered/Cargo.toml
@@ -23,13 +23,14 @@ metered-macro = { version = "0.9.0", path = "../metered-macro" }
 aspect = "0.3"
 hdrhistogram = "7.5"
 atomic = "0.6"
+bytemuck = "1.21.0"
 parking_lot = "0.12"
 serde = { version = "1.0", features = ["derive"] }
 cfg-if = "1.0.0"
 
 [dev-dependencies]
 rand = "0.9"
-proptest = "1.0"
+proptest = "1.6"
 
 [features]
 # no features by default
